--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ os:
 
 before_install:
     - if [ "$TRAVIS_OS_NAME" = "osx" ] ; then sh ./scripts/osx/install-dependencies.sh ; fi
-    - if [ "$TRAVIS_OS_NAME" = "windows" ] ; then cmd /c ./scripts/windows/install-dependencies.bat ; fi
+    - if [ "$TRAVIS_OS_NAME" = "windows" ] ; then ./scripts/windows/install-dependencies.bat ; fi
 
 script:
     - if [ "$TRAVIS_OS_NAME" = "osx" ] ; then sh ./scripts/osx/build.sh ; fi
-    - if [ "$TRAVIS_OS_NAME" = "windows" ] ; then cmd ./scripts/windows/build.bat ; fi
+    - if [ "$TRAVIS_OS_NAME" = "windows" ] ; then ./scripts/windows/build.bat ; fi
