--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,28 @@
 set(TEST_PROJECT_NAME "${PROJECT_NAME}Test")
 
+# GTEST Dependency
+configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+if(result)
+  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
+endif()
+execute_process(COMMAND ${CMAKE_COMMAND} --build .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+if(result)
+  message(FATAL_ERROR "Build step for googletest failed: ${result}")
+endif()
+
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+# Add googletest directly to our build. This defines
+# the gtest and gtest_main targets.
+add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
+                 ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
+                 EXCLUDE_FROM_ALL)
+
 add_executable("${TEST_PROJECT_NAME}"
 	../src/add.cpp
 
@@ -11,16 +34,9 @@ target_include_directories("${TEST_PROJECT_NAME}" BEFORE
 	PUBLIC
 		../include
 		./include
-		"${CMAKE_CURRENT_SOURCE_DIR}/gtest/googletest-release-1.10.0/googletest/include"
+		"${gtest_SOURCE_DIR}/include"
 		)
-
-find_library(GTEST_LIB_DIR
-	NAMES libgtest.a
-	HINTS "${CMAKE_CURRENT_SOURCE_DIR}/gtest/googletest-release-1.10.0/build/googlemock/gtest/" "${CMAKE_CURRENT_SOURCE_DIR}/gtest/googletest-release-1.10.0/build/lib")
-
-add_library(gtest STATIC IMPORTED)
-set_target_properties(gtest PROPERTIES IMPORTED_LOCATION "${GTEST_LIB_DIR}")
 
 target_link_libraries("${TEST_PROJECT_NAME}"
 	PUBLIC
-		gtest)
+		gtest_main)
